--- a/C-C++02.md
+++ b/C-C++02.md
@@ -1,17 +1,17 @@
 ## calloc()
 
-+ 原型：`void *calloc(size_t nitems, size_t size)`
 + 功能：分配所需的内存空间,并返回一个指向它的指针
++ 原型：`void *calloc(size_t nitems, size_t size)`
 + 参数：
   + nitems -- 要被分配的元素的个数
   + size   -- 元素的大小
 + 注意：
-  + malloc和calloc之间的不同点是:malloc不会设置内存为零,而calloc会**设置分配的内存为零**
+  + `malloc`和`calloc`之间的不同点是:`malloc`不会设置内存为零,而`calloc`会**设置分配的内存为零**
 
 ## strlen()
 
-+ 原型：`size_t strlen(const char *str);`
 + 功能：计算字符串 `str` 的长度，直到空结束字符，但不包括空结束字符
++ 原型：`size_t strlen(const char *str);`
 + 参数：
   + `str` -- 要计算长度的字符串
 + 返回值：
@@ -21,8 +21,8 @@
 
 ## dup2()
 
-+ 原型：`int dup2 (int fd, int fd2);`
 + 功能：将 `fd` 复制到 `fd2`，关闭 `fd2` 并使其在同一文件上打开
++ 原型：`int dup2 (int fd, int fd2);`
 + 参数：
   + `fd`  --  已经打开的文件描述符
   + `fd2` --  需要重复打开的文件描述符
@@ -32,8 +32,8 @@
 
 ## write()
 
-+ 原型：`ssize_t write(int __fd, const void *__buf, size_t __n);`
 + 功能：将 n 字节的 buf 写入 __fd
++ 原型：`ssize_t write(int __fd, const void *__buf, size_t __n);`
 + 参数：
   + `__fd`  --  要保存写入数据的文件
   + `__buf` --  保存要写入的内存块指针
@@ -44,8 +44,8 @@
 
 ## read()
 
-+ 原型：`ssize_t read(int __fd, void *__buf, size_t __nbytes);`
 + 功能：将大小为`nbytes`的数据从文件`__fd`中读取到内存`__buf`中
++ 原型：`ssize_t read(int __fd, void *__buf, size_t __nbytes);`
 + 参数：
   + `__fd`  --  被读取数据的文件
   + `__buf` --  存放数据的内存块指针
@@ -56,8 +56,10 @@
 
 ## mmap()
 
++ 功能：
+  + 映射地址从`addr`附近开始并扩展到`len`字节。从`offset`根据`prot`和`flags`写入文件`fd`中描述。
+  + 如果`MAP_FIXED`位是在`flags`中设置，映射将准确地位于`addr`；否则系统会选择一个方便的附近地址
 + 原型：`void* mmap(void *addr, size_t len, int prot, int flags, int fd, off_t offset);`
-+ 功能：映射地址从`addr`附近开始并扩展到`len`字节。从`offset`根据`prot`和`flags`写入文件`fd`中描述。如果`MAP_FIXED`位是在`flags`中设置，映射将准确地位于`addr`；否则系统会选择一个方便的附近地址
 + 参数：
   + `addr`  --  要映射的地址
   + `len`   --  要映射的数据大小
@@ -71,8 +73,8 @@
 
 ## dirname()
 
-+ 原型：`char* dirname(char *path);`
 + 功能：返回`path`的目录部分，如果没有可用的，就返回`.`
++ 原型：`char* dirname(char *path);`
 + 参数：
   + `path`  --  需要查找目录的文件
 + 返回值：
@@ -81,8 +83,8 @@
 
 ## basename()
 
-+ 原型：`char* basename(char *pathfile);`
 + 功能：去掉文件`pathfile`的前缀，只保存文件名(input string:/data/test.cpp , output string:test.cpp)
++ 原型：`char* basename(char *pathfile);`
 + 参数：
   + `pathfile`  --  需要操作的文件
 + 返回值：
@@ -91,10 +93,11 @@
 
 ## readlink()
 
-+ 原型：`ssize_t readlink(const char *path, char *buf, size_t bufsize);`
 + 功能：
   + readlink()会将参数path的 符号链接内容存储到参数buf所指的内存空间，返回的内容不是以\000作字符串结尾，但会将字符串的字符数返回，这使得添加\000变得简单。
-  + 若参数bufsiz小于符号连接的内容长度，过长的内容会被截断，如果 readlink 第一个参数指向一个文件而不是 符号链接时，readlink 设 置errno 为 EINVAL 并返回 -1。 readlink()函数组合了open()、read()和close()的所有操作
+  + 若参数bufsiz小于符号连接的内容长度，过长的内容会被截断，如果 readlink 第一个参数指向一个文件而不是 符号链接时，readlink 设 置errno 为 EINVAL 并返回 -1。 
+  + readlink()函数组合了open()、read()和close()的所有操作
++ 原型：`ssize_t readlink(const char *path, char *buf, size_t bufsize);`
 + 参数：
   + `path`  --  符号连接
   + `buf`   --  存储从`path`读取到的内容
@@ -108,8 +111,8 @@
 
 ## strdup()
 
-+ 原型：`char* strdup(const char *s);`
 + 功能：转储字符串，返回一个字符指针，其存储的内容和参数`s`相同，获得的内存是使用`malloc()`完成的，因此可以使用`free()`完成
++ 原型：`char* strdup(const char *s);`
 + 参数：
   + `s`  --  需要转储的字符串
 + 返回值：
@@ -117,8 +120,8 @@
 
 ## mkdir()
 
-+ 原型：`int mkdir(const char *path, __model_t mode);`
 + 功能：创建一个目录`path`，并将文件权限设置为`mode`
++ 原型：`int mkdir(const char *path, __model_t mode);`
 + 参数：
   + `path`  --  目录文件路径
   + `model` --  创建的目录文件的权限
@@ -128,8 +131,8 @@
 
 ## chmod()
 
-+ 原型：`int chmod(const char* file, mode_t mode);`
 + 功能：将文件`file`的权限设置为`mode`
++ 原型：`int chmod(const char* file, mode_t mode);`
 + 参数：
   + `file`  --  需要修改的文件
   + `mode`  --  权限
@@ -139,28 +142,28 @@
 
 ## open()
 
-+ 原型：`int open(const char *path, int __oflag, ...);`
 + 功能：以指定模式打开指定文件
++ 原型：`int open(const char *path, int __oflag, ...);`
 + 参数：
   + `path`  --  要操作的文件，绝对路径
   + `oflag` --  通常由一下常量通过或运算`I`组成
-    + O_RDONlY 只读打开
-    + O_WRONlY 只写打开
-    + O_RDWR 读写打开
-    + O_EXEC 只执行打开
-    + O_SEARCH 只搜索（对于目录有此选项）
+    + `O_RDONlY` 只读打开
+    + `O_WRONlY` 只写打开
+    + `O_RDWR` 读写打开
+    + `O_EXEC` 只执行打开
+    + `O_SEARCH` 只搜索（对于目录有此选项）
     + 在以上五个常量中必须指定且只能指定一个，而以下常量为可选的 
-      + O_APPEND 每次写入追加到文件末尾
-      + O_CLOEXEC 把FD_CLOEXEC设定为文件描述符
-      + O_CREATE 若文件不存在则创建， 需要指定文件权限位 ， 即mode_t 参数。
-      + O_DIRECTORY 若path指向的不为目录，则出错。
-      + O_EXCL 若同时指定O_CREATE且文件不存在，则出错。可以将测试文件存在和创建文件封装为原子操作
-      + O_NOCTTY 若path引用的是终端设备，则不将该设备分配作为该进程的控制终端
-      + O_NONBLOCK 若path引用的是一个FIFO，一个块特殊文件或者字符特殊文件，则此选项将本次文件的打开操作和后续的IO操作设置为非阻塞模式
-      + O_SYNC 每次操作需要等待物理IO完成，包括更新文件属性而需要的物理IO
-      + O_TURNC 若文件存且为只写或读写打开，那么将其长度截断为零。
-      + O_DSYNC 每次写入需要等待物理IO完成，但是如果不影响读取，则不需要更新文件属性
-      + O_FSYNC 使每一个 以文件描述符为参数的进行的read操作等待，直到所有对文件同一部分的挂起写操作都完成
+      + `O_APPEND` 每次写入追加到文件末尾
+      + `O_CLOEXEC` 把FD_CLOEXEC设定为文件描述符
+      + `O_CREATE` 若文件不存在则创建， 需要指定文件权限位 ， 即mode_t 参数。
+      + `O_DIRECTORY` 若path指向的不为目录，则出错。
+      + `O_EXCL` 若同时指定O_CREATE且文件不存在，则出错。可以将测试文件存在和创建文件封装为原子操作
+      + `O_NOCTTY` 若path引用的是终端设备，则不将该设备分配作为该进程的控制终端
+      + `O_NONBLOCK` 若path引用的是一个FIFO，一个块特殊文件或者字符特殊文件，则此选项将本次文件的打开操作和后续的IO操作设置为非阻塞模式
+      + `O_SYNC` 每次操作需要等待物理IO完成，包括更新文件属性而需要的物理IO
+      + `O_TURNC` 若文件存且为只写或读写打开，那么将其长度截断为零。
+      + `O_DSYNC` 每次写入需要等待物理IO完成，但是如果不影响读取，则不需要更新文件属性
+      + `O_FSYNC` 使每一个 以文件描述符为参数的进行的read操作等待，直到所有对文件同一部分的挂起写操作都完成
 + 返回值：
   + 成功  --
   + 失败  --
@@ -170,8 +173,8 @@
 
 ## atoi()
 
-+ 原型：`int atoi(const char *str);`
 + 功能：把参数 str 所指向的字符串转换为一个整数（类型为 int 型）
++ 原型：`int atoi(const char *str);`
 + 参数：
   + `str`  -- 要转换为整数的字符串
 + 返回值：
@@ -180,8 +183,8 @@
 
 ## atol()
 
-+ 原型：`long int atol(const char *str);`
 + 功能：把参数 str 所指向的字符串转换为一个长整数（类型为 long int 型）
++ 原型：`long int atol(const char *str);`
 + 参数：
   + `str` -- 要转换为长整数的字符串
 + 返回值
@@ -190,8 +193,8 @@
 
 ## atof()
 
-+ 原型：`double atof(const char *str);`
 + 功能：把参数 str 所指向的字符串转换为一个浮点数（类型为 double 型）
++ 原型：`double atof(const char *str);`
 + 参数：
   + `str`  --  要转换为浮点数的字符串
 + 返回值：
@@ -200,8 +203,8 @@
 
 ## clock_gettime()
 
-+ 原型：`int clock_gettime(clockid_t __clock_id, struct timespec *__tp);`
 + 功能：获取当前时钟的时间，并保存到参数`__tp`
++ 原型：`int clock_gettime(clockid_t __clock_id, struct timespec *__tp);`
 + 参数：
   + `__clock_id`  --  时钟ID
   + `__tp`        --  `timespec` 结构体指针
@@ -213,8 +216,11 @@
 
 ## getdelim()
 
++ 功能：
+  + 函数应从流读取，直到遇到与定界符字符匹配的字符为止。
+  + 定界符参数是一个int，应用程序应确保其为终止读取过程的无符号字符表示的字符。
+  + 如果定界符参数具有任何其他值，则行为是不确定的，换言之，从给定文件中读取流，遇到定界符参数就终止
 + 原型：`_IO_ssize_t __getdelim(char **__restrict __lineptr, size_t *__restrict __n, int __delimiter, FILE *__restrict __stream);`
-+ 功能：函数应从流读取，直到遇到与定界符字符匹配的字符为止。定界符参数是一个int，应用程序应确保其为终止读取过程的无符号字符表示的字符。如果定界符参数具有任何其他值，则行为是不确定的，换言之，从给定文件中读取流，遇到定界符参数就终止
 + 参数：
   + `lineptr`  --  指向初始缓冲区或空指针的指针
   + `n`        --  指向初始缓冲区大小的指针
@@ -226,9 +232,9 @@
 
 ## iscntrl()
 
-+ 原型：`int iscntrl(int c);`
 + 功能：检查所传的字符是否是控制字符
   + 根据标准 ASCII 字符集，控制字符的 ASCII 编码介于 0x00 (NUL) 和 0x1f (US) 之间，以及 0x7f (DEL)，某些平台的特定编译器实现还可以在扩展字符集（0x7f 以上）中定义额外的控制字符
++ 原型：`int iscntrl(int c);`
 + 参数：
   + `c`  --  要检查的字符
 + 返回值：
@@ -239,8 +245,8 @@
 
 ## strcpy()
 
-+ 原型：`char *strcpy(char *dest, const char *src);`
 + 功能：把 `src` 所指向的字符串复制到 `dest`
++ 原型：`char *strcpy(char *dest, const char *src);`
 + 参数：
   + dest  --  指向用于存储复制内容的目标数组
   + src   --  要复制的字符串
@@ -351,8 +357,8 @@
 
 ## fopen()
 
-+ 原型： `FILE *fopen(const char *filename, const char *mode);`
 + 功能：使用给定的模式(mode)打开(filename)所指向的文件
++ 原型： `FILE *fopen(const char *filename, const char *mode);`
 + 参数：
   + `filename` -- 字符串，表示要打开的文件名称
   + `mode`     -- 字符串，表示文件的访问模式
@@ -369,8 +375,8 @@
 
 ## fwrite()
 
-+ 原型：`size_t fwrite(const void *ptr, size_t size, size_t nmemb, FILE *stream);`
 + 功能：把 `ptr` 所指向的数组中的数据写入到给定流 `stream` 中
++ 原型：`size_t fwrite(const void *ptr, size_t size, size_t nmemb, FILE *stream);`
 + 参数：
   + `ptr`    -- 这是指向要被写入的元素数组的指针
   + `size`   -- 这是要被写入的每个元素的大小，以字节为单位
@@ -382,8 +388,8 @@
 
 ## fflush()
 
-+ 原型：`int fflush(FILE *stream);`
 + 功能：刷新流 `stream` 的输出缓冲区
++ 原型：`int fflush(FILE *stream);`
 + 参数：
   + `stream` -- 这是指向 `FILE` 对象的指针，该 `FILE` 对象指定了一个缓冲流
 + 返回值：
@@ -394,8 +400,8 @@
 
 ## fseek()
 
-+ 原型：`int fseek(FILE *stream, long int offset, int whence);`
 + 功能：设置流 `stream` 的文件位置为给定的偏移 `offset`，参数 `offset` 意味着从给定的 `whence` 位置查找的字节数。
++ 原型：`int fseek(FILE *stream, long int offset, int whence);`
 + 参数：
   + stream -- 这是指向 FILE 对象的指针，该 FILE 对象标识了流
   + offset -- 这是相对 whence 的偏移量，以字节为单位
@@ -409,8 +415,8 @@
 
 ## ftell()
 
-+ 原型：`long int ftell(FILE *stream);`
 + 功能：返回给定流 stream 的当前文件位置
++ 原型：`long int ftell(FILE *stream);`
 + 参数：
   + stream -- 这是指向 FILE 对象的指针，该 FILE 对象标识了流
 + 返回值：
@@ -419,8 +425,8 @@
 
 ## rewind()
 
-+ 原型：`void rewind(FILE *stream);`
 + 功能：设置文件位置为给定流 `stream` 的文件的开头
++ 原型：`void rewind(FILE *stream);`
 + 参数：
   + `stream` -- 这是指向 `FILE` 对象的指针，该 `FILE` 对象标识了流。
 + 返回值：
@@ -430,8 +436,8 @@
 
 ## access()
 
-+ 原型：`int access (const char *__name, int __type);`
 + 功能：确定文件或文件夹的访问权限。即，检查某个文件的存取方式，例如说是只读方式，只写方式等。如果指定的存取方式有效，则函数返回0，否则返回-1
++ 原型：`int access (const char *__name, int __type);`
 + 参数
   + `name` -- 文件路径
   + `type` -- 判断参数
@@ -444,8 +450,8 @@
 
 ## remove()
 
-+ 原型：`int remove(const char* __filename);`
 + 功能：通过文件名称删除文件
++ 原型：`int remove(const char* __filename);`
 + 参数：
   + `filename`  --  指向文件名的字符指针
 + 需求：
@@ -453,12 +459,21 @@
 
 ## rename()
 
-+ `#include <stdio.h> int rename(const char* old, const char* new);`
-+ 重命名一个文件
++ 功能：重命名一个文件
++ 原型：`int rename(const char* old, const char* new);`
++ 参数：
+  + `old`  --  旧的文件名
+  + `new`  --  新的文件名
++ 返回值：
+  + 成功  -- 
+  + 失败  -- 
++ 需求：
+  + `#include <stdio.h>`
 
 ## assert()
 
-+ C库宏 `void assert(int expression)` 允许诊断信息被写入到标准错误文件中。换句话说，它可用于在C程序中添加诊断
++ 功能：C库宏 允许诊断信息被写入到标准错误文件中。换句话说，它可用于在C程序中添加诊断
++ 原型：`void assert(int expression)`
 + 参数：
   + `expression` : 这可以是一个变量或任何C表达式。
     + 如果`expression`为真，`assert()`不执行任何动作。
@@ -466,8 +481,8 @@
 
 ## getenv()
 
-+ 原型：`#include <stdlib.h>  char* getenv (const char* name);`
 + 功能：搜索 name 所指向的环境字符串，并返回相关的值给字符串，
++ 原型：`#include <stdlib.h>  char* getenv (const char* name);`
 + 参数：
   + name  --  包含被请求变量名称的C字符串
 + 返回值：
@@ -476,34 +491,36 @@
 
 ## to_string()
 
-+ 原型：`string to_string(int val);`
 + 功能:一个字符串对象，包含val作为字符序列的表示形式
-+ 参数：`val` ， 数值
++ 原型：`string to_string(int val);`
++ 参数：
+  + `val`  --  数值
 
 ## strcat()
 
-+ 原型：`char* strcat(char* destination, const char* source);`
 + 功能：将源字符串的副本附加到目标字符串。目标中的终止空字符被源的第一个字符覆盖，并且在目标中两者连接形成的新字符串的末尾包含一个空字符。
++ 原型：`char* strcat(char* destination, const char* source);`
 + 参数：
-  + `destination` ： 指向目标数组的指针，它应该包含一个C字符串，并且足够大以包含连接的结果字符串。(Pointer to the destination array, which should contain a C string, and be large enough to contain the concatenated resulting string.)
-  + `source` : 要附加的C字符串，这部应该与目标字符串相同。(C string to be appended. This should not overlap destination.)
+  + `destination` ： 指向目标数组的指针，它应该包含一个C字符串，并且足够大以包含连接的结果字符串。
+  + `source` : 要附加的C字符串，这部应该与目标字符串相同。
 
 ## puts()
 
-+ 原型：`int puts(const char* str);`
-+ 功能：将字符串写入标准输出。将str指向的C字符串写入标准输出(stdout)并且附加一个换行符(`'\n'`)。
++ 功能：
+  + 将字符串写入标准输出。将str指向的C字符串写入标准输出(stdout)并且附加一个换行符(`'\n'`)。
   + 该函数从指定的地址（str）开始复制，直到到达终止空字符（'\0')。此终止空字符不会复制到流中
   + 注意，puts不仅与fputs不同，它使用标准输出作为目标，而且它还在末尾自动附加一个环行符（fputs则没有）
++ 原型：`int puts(const char* str);`
 + 参数：
   + `str` : 需要打印的C字符串
 + 返回值
-  + 成功时，返回一个非负值
-  + 失败时，该函数返回EOF并且设置错误指示符(ferror)
+  + 成功  --  返回一个非负值
+  + 失败  --  该函数返回EOF并且设置错误指示符(ferror)
 
 ## sprintf()
 
-+ 原型：` int sprintf(char *str, const char* format, ... )`
 + 功能：发送格式化输出到str所指向的字符串
++ 原型：` int sprintf(char *str, const char* format, ... )`
 + 参数：
   + `str`：这是指向一个字符数组的指针，该数组存储了C字符串
   + `format`:这是字符串，包含了要被写入到字符串`str`的文本。它可以包含嵌入的`format`标签，`format`标签可被随后的附加参数中指定的值替换，并按需求进行格式化。`format`标签属性是`%[flags][width][.precision][length]specifier`
@@ -525,15 +542,15 @@
     + `n` : 无输出
     + `%` : 字符
 + 返回值：
-  + 如果成功，则返回写入的字符总数，不包括字符串追加在字符串末尾的空字符
-  + 如果失败，则返回一个负数
+  + 成功  --  返回写入的字符总数，不包括字符串追加在字符串末尾的空字符
+  + 失败  --  返回一个负数
 + 需求：
   + 头文件：`#include <stdio.h>`
   
 ## snprintf()
 
-+ 原型：`int snprintf(char* s, size_t n, const char* format, ...);`
 + 功能：将格式化的输出写入大小适中的缓冲区
++ 原型：`int snprintf(char* s, size_t n, const char* format, ...);`
 + 参数：
   + `s` -- 指向存储C字符串的缓冲区的指针。这个缓冲区的大小至少要能存储`n`个字符
   + `n` -- 在缓冲区存储的最大字节数。通常，生成的字符串最大长度为`n-1`，留下一个空间存储空字符
@@ -545,10 +562,10 @@
 
 ## sscanf()
 
-+ 原型：`int sscanf(const char* s, const char* format, ...);`
 + 功能：
   + 从s读取数据并根据参数格式将它们存储到附加参数给出的位置，就像使用了scanf一样，但从s而不是标准输入（stdin）读取数据。
   + 附加参数应该指向已分配的对象，其类型由格式字符串中的相应格式说明符指定。
++ 原型：`int sscanf(const char* s, const char* format, ...);`
 + 参数：
   + `s`  --  存储数据的指针
   + `format`  --  格式化字符串
@@ -568,11 +585,11 @@
 
 ## strtol()
 
-+ 原型：` long int strtol (const char* str, char** endptr, int base);`
 + 功能：
   + 解析C字符串str，将其内容解释为指定基数的整数，该基数作为long int返回。如果endptr不是空指针，该函数还将endptr的值设置为指向数字后的第一个字符。
   + 该函数首先根据需要丢弃尽可能多的空白字符，直到找到第一个非空白字符。然后，从这个字符开始，按照依赖于基本参数的语法获取尽可能多的有效字符，并将它们解释为数值。
   + 最后，指向str中整数表示之后的第一个字符的指针存储在endptr指向的对象中。
++ 原型：` long int strtol (const char* str, char** endptr, int base);`
 + 参数：
   + `str`:以整数表示的C字符串开头(C-string beginning with the representation of an integral number)
   + `endptr`:引用`char*`类型的对象，其值由函数设置为`str`中数值之后的下一个字符。
@@ -585,8 +602,8 @@
 
 ## strcasecmp()
 
-+ 原型：`extern int strcasecmp(const char *__s1, const char *__s2)`
 + 功能：比较参数s1和s2字符串，比较时会自动忽略大小写的差异
++ 原型：`extern int strcasecmp(const char *__s1, const char *__s2)`
 + 参数：
   + `__s1`  -- 字符指针s1
   + `__s2`  -- 字符指针s2
@@ -599,8 +616,8 @@
   
 ## strncasecmp()
 
-+ 原型：` int strncasecmp(const char* s1, const char* s2, size_t n);`
 + 功能：用来比较参数s1和s2字符串前n各字符，比较时会自动忽略大小写的差异
++ 原型：` int strncasecmp(const char* s1, const char* s2, size_t n);`
 + 参数：
   + `s1`  -- 字符指针s1
   + `s2`  -- 字符指针s2
@@ -611,10 +628,11 @@
   + s1若小于s2，则返回小于0的值
 + 需求：
   + 头文件：`#include <string.h>`
+
 ## reserve()
 
-+ 原型：`void reserve (size_type n);`
 + 功能：请求更改容量
++ 原型：`void reserve (size_type n);`
 + 参数：
   + `n` ： 向量的最小容量。
 
@@ -639,15 +657,17 @@
 
 ## std::get()
 
-```
-  (1)template <size_t I, class... Types> typename tuple_element<I, tuple<Types...>>::type& get(tuple<Types...>& tpl) noexcept;
-  (2)template <size_t I, class... Types> typename tuple_element<I, tuple<Types...>>::type&& get(tuple<Types...>&& tpl) noexcept;
-  (3)template <size_t I, class... Types> typename tuple_element<I, tuple<Types...>>::type const& get(tuple<Types...>& tpl) noexcept;
-```
-
-+ 功能：返回对元组`tpl`的第`I`个元素的引用。
++ 功能：
+  + 返回对元组`tpl`的第`I`个元素的引用。
   + 版本2将元组的右值作为引用参数，向前应用到返回的元素
   + 版本3将const元组作为参数，返回对元素的const引用
++ 原型：
+    ```
+      (1)template <size_t I, class... Types> typename tuple_element<I, tuple<Types...>>::type& get(tuple<Types...>& tpl) noexcept;
+      (2)template <size_t I, class... Types> typename tuple_element<I, tuple<Types...>>::type&& get(tuple<Types...>&& tpl) noexcept;
+      (3)template <size_t I, class... Types> typ
+      ename tuple_element<I, tuple<Types...>>::type const& get(tuple<Types...>& tpl) noexcept;
+    ```
 + 参数
   + `I` -- 元组中元素的位置，0为第一个元素的位置，`size_t`是无符号整数类型
   + `Types` -- 元组中元素的类型（通常从tpl隐式获得）
@@ -656,9 +676,8 @@
 
 ## fstat()
 
-+ 原型：`int fstat(int __fd, struct stat *__buf);`
 + 功能：获取文件的所有信息
-  + Get file attributes for the file, device, pipe, or socket that file descriptor FD is open on and put the in BUF
++ 原型：`int fstat(int __fd, struct stat *__buf);`
 + 参数：
   + `__fd`  --  文件描述符
   + `__buf` --  内存区域指针
@@ -694,8 +713,8 @@
 
 ## munmap()
 
-+ 原型：`int munmap(void* __addr, size_t __len);`
 + 功能：解除任何内存映射
++ 原型：`int munmap(void* __addr, size_t __len);`
 + 参数：
   + `addr`  --  内存地址
   + `__len` --  内存地址大小
@@ -738,8 +757,8 @@
 
 ## clock_gettime()
 
-+ 函数原型：`int clock_gettime(clockid_t clk_id, struct timespec *tp);`
 + 功能：用于计算时间，有秒和纳秒两种精度
++ 函数原型：`int clock_gettime(clockid_t clk_id, struct timespec *tp);`
 + 参数：
   + `clockid_t clk_id`有四种
     + `CLOCK_REALTIME` -- 系统实时时间，随系统实时时间改变而改变
@@ -749,8 +768,8 @@
 
 ## vsscanf()
 
-+ 原型：`int vsscanf(const char* s, const char* format, va_list arg);`
 + 功能：**将格式化数据从字符串读取到变量参数列表中**。从s读取数据并根据参数格式将它们存储到由arg标识的变量参数列表中的元素所指向的位置。
++ 原型：`int vsscanf(const char* s, const char* format, va_list arg);`
   + 在内部，该函数从由arg标识的列表中检索参数，就好像在其上使用了`va_arg`一样，因此`arg`的状态可能会被调用更改。
   + 无论如何，`arg`应该在调用之前的某个时间点由`va_start`初始化，并且预计在调用之后的某个时间点由`va_end`释放。
 + 参数
@@ -764,10 +783,8 @@
 
 ## memset()
 
++ 功能：将`ptr`指向的内存块的前`num`字节设置为指定值（解释为无符号字符）
 + 原型：`void* memset(void* ptr, int value, size_t num);`
-+ 功能：
-  + 将`ptr`指向的内存块的前`num`字节设置为指定值（解释为无符号字符）
-  + Sets the first num bytes of the block of memory pointed by ptr to the specified value(interpreted as an unsigned char).
 + 参数
   + `ptr` -- 指向要填充的内存块的指针
   + `value` -- 要设置的值。该值作为int传递，但是该函数使用该值的转换的无符号字符填充内存块
@@ -777,9 +794,8 @@
 
 ## max()
 
++ 功能：返回a和b中的最大值。如果两者相等，则返回a
 + 原型：`template <class T> const T& max (const T& a, const T& b);`
-+ 功能
-  + 返回a和b中的最大值。如果两者相等，则返回a
 + 返回值
   + 作为参数传递的最大值
 
@@ -840,9 +856,9 @@
   + 在无锁编程环境中(Lock-free)，主要使用的原子操作为`CAS(Compare and Swap)`操作。使用这种原子操作替代锁的最大的一个好处是**它是非阻塞的**。
   + 分布式编程设计的主要特征是**分布和通信**。
     + 采用分布式程序设计方法设计程序时，一个程序由若干个可独立执行的程序模块组成。这些程序模块分布于一个分布式计算机系统的几台计算机上同时执行。
-    + 分布在各台计算机上的程序模块是相互关联的，它们在执行中需要交换数据，即**通信**。只有通过通信，各程序模块才能协调地完成一个共同的计算任务。
+
+    + 分布式程序设计语言与常用的各种程序设计语言的主要区别：在于它具有程序分布和通信的功能。**因此，分布式程序设计语言，往往可以由一种程序设计语言增加分布和通信的功能而构成**。    + 分布在各台计算机上的程序模块是相互关联的，它们在执行中需要交换数据，即**通信**。只有通过通信，各程序模块才能协调地完成一个共同的计算任务。
     + 采用分布式程序设计方法解决计算问题，必须提供用以进行分布式程序设计的语言和设计相应的分布式算法。
-    + 分布式程序设计语言与常用的各种程序设计语言的主要区别：在于它具有程序分布和通信的功能。**因此，分布式程序设计语言，往往可以由一种程序设计语言增加分布和通信的功能而构成**。
     + 分布式算法和适用于多处理器系统的并行算法，都具有并行执行的特点，但它们是有区别的。
       + 设计分布算法时，必须保证实现算法的各程序模块间不会有公共变量，它们只能通过通信来交换数据。此外，设计分布式算法时，往往需要考虑坚定性，即**当系统中几台计算机失效时，算法仍然是v有效的。
 
@@ -900,16 +916,14 @@
 ## tuple,元组
 
 + 简介：
-  + `tuple`是一个固定大小的不同类型值的集合，是泛化的`std::pair`。可以把他当做一个通用的结构体来用，不需要创建结构体又获取结构体的特征，在某些情况下可以取代结构体使程序更加简洁，直观。`std::tuple`理论上可以有无数个任意类型的成员变量，而`std::pair`只能是2个成员，因此在需要保存3个及以上的数据时就需要使用`tuple`元组
+  + `tuple`是一个固定大小的不同类型值的集合，是泛化的`std::pair`。
+  + 可以把他当做一个通用的结构体来用，不需要创建结构体又获取结构体的特征，在某些情况下可以取代结构体使程序更加简洁，直观。
+  + `std::tuple`理论上可以有无数个任意类型的成员变量，而`std::pair`只能是2个成员，因此在需要保存3个及以上的数据时就需要使用`tuple`元组
 
 + `template <class... Types> class tuple;`
 + 元组是能够保存元素集合的对象。每个元素可以是不同的类型
 + 模板参数：
   + `Types...` -- 用于元素的类型列表，其顺序与它们在元组中的排序顺序相同
-
-## auto
-
-+ C++11引入了auto和decltype关键字实现类型推导，通过这两个关键字不仅能方便地获取复杂的类型，而且还能简化书写，提高编程效率。
 
 ## 类和动态内存分配
 
@@ -967,7 +981,8 @@
 
 ## typedef
 
-+ `typedef`声明,为现有类型创建一个新的名字。比如常常使用`typedef`来编写更美观和可读的代码。所谓美观，是指`typedef`能够隐藏笨拙的语法构造以及平台相关的数据类型，从而增强可移植性以及未来的可维护性。
++ `typedef`声明,为现有类型创建一个新的名字。比如常常使用`typedef`来编写更美观和可读的代码。
++ 所谓美观，是指`typedef`能够隐藏笨拙的语法构造以及平台相关的数据类型，从而增强可移植性以及未来的可维护性。
 
 + 在编程中使用`typedef`目的一般有两个，一个是给变量一个容易记且意义明确的新名字，另一个是简化一些比较复杂的类型声明。
 
@@ -997,7 +1012,8 @@
     + `void (*pFunc)(int);`
     + `pFunc = &printHello;`
     + `(*pFunc)(110);`
-  + 其中，`void (*pFunc)(int)`是声明一个函数指针，指向返回值是`void`，调用参数是`(int)`的函数，变量名是`pFunc`就是函数指针。这种声明一个函数指针是比较复杂的，尤其是要在多处地方声明同一个类型的函数指针变量，代码更加复杂
+  + 其中，`void (*pFunc)(int)`是声明一个函数指针，指向返回值是`void`，调用参数是`(int)`的函数，变量名是`pFunc`就是函数指针。
+  + 这种声明一个函数指针是比较复杂的，尤其是要在多处地方声明同一个类型的函数指针变量，代码更加复杂
   + 简化的做法
     + `typedef void (*PrintHelloHandle)(int);`
   + 使用代码如下：
@@ -1008,8 +1024,8 @@
 
 ## pair
 
-+ 类模块：`template<class T1,class T2> struct pair`
 + 功能： `pair` 将一对值组合成一个值,这一对值可以具有不同的数据类型（T1和T2）,两个值可以分别用pair的两个公有函数first和second访问。
++ 类模块：`template<class T1,class T2> struct pair`
 + 参数：
   + T1  --  第一个值的数据类型
   + T2  --  第二个值的数据类型
@@ -1054,10 +1070,10 @@
   + 封装：由对象的概念支持。只需知道外部接口，不需知道内部实现，就可以使用的特性
   + 继承：由类的概念支持。利用已有的成果进行扩展，充分体现了代码重用
   + 多态：运行时特性
+  + 确定每个对象和类的功能，例如具体的属性和方法等。
 
 + 面向对象的程序设计的步骤：
   + 找出问题中的对象和类
-  + 确定每个对象和类的功能，例如具体的属性和方法等。
   + 找出这些对象和类之间的关系，确定对象之间的消息通信方式，类之间的继承和组合等关系
   + 编写程序实现这些对象和类
 
