--- a/软件工程.md
+++ b/软件工程.md
@@ -7,8 +7,8 @@
 + 软件工程师 = 程序员 + 软件工程知识
 + PM(Program Manager) = 项目管理 + 产品管理，直译为程序经理，实际上是项目管理和产品管理的二合一角色
 + 团队 = PM + 软件工程师 + Designer
-  + Designer， 直译就是设计师，负责用户界面和交互的设计
-  + 通常情况下，PM和软件工程师是长期合作的，而Designer有自己的独立组织，与团队是临时合作
+  - Designer， 直译就是设计师，负责用户界面和交互的设计
+  - 通常情况下，PM和软件工程师是长期合作的，而Designer有自己的独立组织，与团队是临时合作
 
 + 软件工程 = 团队 + 过程定义 + 执行
 + 软件 = 程序 + 软件工程
@@ -19,7 +19,7 @@
 + 产品，其特点由公司决定要做什么，给客户提供什么，具有长期规划，不断迭代
 
 + 项目，包括两类：
-  + 一种是狭义的，在销售给客户产品后，再同时开发/提供一些定制软件，那么会有配套的开发人员进行售后服务
-  + 另一种是广义的，其宿主是服务或产品，完成其一个小功能
+  - 一种是狭义的，在销售给客户产品后，再同时开发/提供一些定制软件，那么会有配套的开发人员进行售后服务
+  - 另一种是广义的，其宿主是服务或产品，完成其一个小功能
 
 + 服务，以云端服务为主，具有战略意义，这种服务的后台通常有超级复杂的架构体系支撑，在性能，可用性，可靠性上下足了功夫，高并发大容量
