--- a/软件开发基础知识.md
+++ b/软件开发基础知识.md
@@ -55,8 +55,8 @@
 + 执行这种翻译任务的程序称为编译器(compiler)
 + 在编译阶段出现的错误称作解析错误(parse error)或语法错误(syntax error)
 + 当没有语法错误后，编译器就可以成功地翻译程序，并声称机器语言形式的程序，生成的程序将完成最开始C++程序所要执行的功能。
-  + 这一，C++程序称为源文件(source file)，而生成的机器语言版本则称为目标文件(object file)
-  + 因此，源程序和目标程序所描述的功能是一致的，但是源程序使用高级语言编写的，而目标程序则是以机器语言的形式
+  - 这一，C++程序称为源文件(source file)，而生成的机器语言版本则称为目标文件(object file)
+  - 因此，源程序和目标程序所描述的功能是一致的，但是源程序使用高级语言编写的，而目标程序则是以机器语言的形式
 
 + 执行(execution)，这些步骤包括将目标程序与机器语言语句进行链接(linking)和把程序载入(loading)内存
 + 在执行阶段出现的错误称为执行错误(execution error)，运行时错误(run-time error)或逻辑错误(logic error)，这些错误也叫做程序bug
@@ -78,8 +78,8 @@
 
 + 当数据存储在内存中时，它是以位序列存在的。
 + 这些位序列可能是指令，数字，字符，图像或数字信号的一部分，或者是其他类型的数据
-  + 负数的存储
-  + 浮点数的存储
+  - 负数的存储
+  - 浮点数的存储
 
 ## 框架(Framework)
 
@@ -94,7 +94,7 @@
   - 还有框架一般都经过很多人使用，所以结构很好，所以扩展性也很好，而且它是不断升级的，你可以直接享受别人升级代码带来的好处
 
 + 软件为什么要分层？
- - 为了实现“高内聚、低耦合”。把问题划分开来各个解决，易于控制，易于延展，易于分配资源等
+ - 为了**实现“高内聚、低耦合”**。把问题划分开来各个解决，易于控制，易于延展，易于分配资源等
 
 + 框架和设计模式
   - 构件通常是代码重用，而设计模式是设计重用，框架则介于两者之间，部分代码重用，部分设计重用，有时分析也可重用
@@ -164,45 +164,43 @@
 数据对齐
 + 许多计算机系统对基本数据类型的合法地址做出了一些限制,要求某种类型对象的地址必须是某个值K(通常是2,4或8)的倍数,这种对齐限制简化了形成处理器和内存系统之间接口的硬件设计
 + 强制对齐:
-    + 对于大多数x86-64指令来说,保持数据对其能够提高效率,但是它不会影响程序的行为
-    + 另一方面,如果数据没有对齐,某些型号的Intel和AMD处理器对于有些实现多媒体操作的SSE指令,就无法正确执行.
+  - 对于大多数x86-64指令来说,保持数据对其能够提高效率,但是它不会影响程序的行为
+  - 另一方面,如果数据没有对齐,某些型号的Intel和AMD处理器对于有些实现多媒体操作的SSE指令,就无法正确执行.
 
 理解指针
 + 指针以一种统一方式,对不同数据结构中的元素产生引用
 + 每个指针都对应一个类型,这个类型表明该指针指向的是哪一类对象
-  + `int* ip`表示变量ip是一个指向int类型对象的指针,`char** cpp`表示cpp指针指向的对象自身就是一个指向char类型对象的指针
-  + 通常,如果对象类型为`T`,那么指针的类型为`T*`;特殊的, `void *`类型代表通用指针.比如说,malloc函数返回一个通用指针,然后通过显式强制类型转换或者赋值操作那样的隐式强制类型转换,将它转换成一个有类型的指针.
-  + 指针类型不是机器代码中的一部分,它们是C语言提供的一种抽象,帮助程序员避免寻址错误
-  + 每个指针都有一个值,这个值是某个指定类型的对象的地址.特殊的NULL(0)值表示该指针没有指向任何地方
-  + 指针用`&`运算符创建.这个运算符可以应用到任何`lvalue`类的C表达式上,`lvalue`表示可以出现在赋值语句左边的表达式
-  + `*`操作符用于间接引用指针,其结果是一个值,它的类型与该指针的类型一致,**间接引用**是用内存引用来实现的,要么是存储到一个指定的地址,要么是从指定的地址读取
-  + 数组与指针紧密联系.一个数组的名字可以像一个指针变量一样引用(但是不能修改).数组引用(例如`a[3]`)与指针运算和间接引用(例如`*(a + 3)`)有一样的效果.数组引用和指针运算都需要用对象大小对偏移量进行伸缩
-  + 将指针从一种类型强制转换成另一种类型,只改变它的类型,而不改变它的值.强制类型转换的一个效果是改变指针运算的伸缩
-  + 指针也可以指向函数.这提供了一个很强大的存储和向代码传递引用的功能,这些引用可以被程序的某个其他部分调用
+  - `int* ip`表示变量ip是一个指向int类型对象的指针,`char** cpp`表示cpp指针指向的对象自身就是一个指向char类型对象的指针
+  - 通常,如果对象类型为`T`,那么指针的类型为`T*`;特殊的, `void *`类型代表通用指针.比如说,malloc函数返回一个通用指针,然后通过显式强制类型转换或者赋值操作那样的隐式强制类型转换,将它转换成一个有类型的指针.
+  - 指针类型不是机器代码中的一部分,它们是C语言提供的一种抽象,帮助程序员避免寻址错误
+  - 每个指针都有一个值,这个值是某个指定类型的对象的地址.特殊的NULL(0)值表示该指针没有指向任何地方
+  - 指针用`&`运算符创建.这个运算符可以应用到任何`lvalue`类的C表达式上,`lvalue`表示可以出现在赋值语句左边的表达式
+  - `*`操作符用于间接引用指针,其结果是一个值,它的类型与该指针的类型一致,**间接引用**是用内存引用来实现的,要么是存储到一个指定的地址,要么是从指定的地址读取
+  - 数组与指针紧密联系.一个数组的名字可以像一个指针变量一样引用(但是不能修改).数组引用(例如`a[3]`)与指针运算和间接引用(例如`*(a + 3)`)有一样的效果.数组引用和指针运算都需要用对象大小对偏移量进行伸缩
+  - 将指针从一种类型强制转换成另一种类型,只改变它的类型,而不改变它的值.强制类型转换的一个效果是改变指针运算的伸缩
+  - 指针也可以指向函数.这提供了一个很强大的存储和向代码传递引用的功能,这些引用可以被程序的某个其他部分调用
 
-内存越界引用和缓冲区溢出
-
-   
-1. 模型相关的,b站视频
-2. 多看项目(github),多练
-3. 大厂的代码,main中变量的声明(amlogic, nvidia)
-4. shell 不必花费太多精力,推荐:python,php(现在不要去学,单点击穿,现在主要学习C++)
++ 内存越界引用和缓冲区溢出
+  1. 模型相关的,b站视频
+  2. 多看项目(github),多练
+  3. 大厂的代码,main中变量的声明(amlogic, nvidia)
+  4. shell 不必花费太多精力,推荐:python,php(现在不要去学,单点击穿,现在主要学习C++)
 
 ## 如何阅读大型项目的代码？
 
 + 目的性：读代码的时候如果有目的性是最好的。
 + 时间：总体来讲，阅读大型项目的代码需要时间。
 + 方法论：抽象地说，阅读代码有两种方向，自底向上和自顶向下。
-  + 自底向上，从具体的文件到子模块，从子模块到功能集，再到整个项目，强调的是从具体实现出发总结出一般抽象。
-  + 自顶向下，从项目的顶层设计到责任分发，从责任分发到功能分发，再到具体的实现代码，强调的是从抽象设计出发落实到具体实现。
-  + 两种方法是两个不同的视角。实践中经常需要结合两种方向随时切换地采用，当对大方向了解不足的时候自顶向下的看，当对实现细节不够明确的时候自底向上的看
+  - 自底向上，从具体的文件到子模块，从子模块到功能集，再到整个项目，强调的是从具体实现出发总结出一般抽象。
+  - 自顶向下，从项目的顶层设计到责任分发，从责任分发到功能分发，再到具体的实现代码，强调的是从抽象设计出发落实到具体实现。
+  - 两种方法是两个不同的视角。实践中经常需要结合两种方向随时切换地采用，当对大方向了解不足的时候自顶向下的看，当对实现细节不够明确的时候自底向上的看
 
 ## 上下文 context
 
 + 维基百科
-  + 在计算机科学中，任务(task)的上下文(context)是一个任务所必不可少的一组数据（该任务可以是进程，线程）。
-  + 这些数据允许任务中断，在这之后仍可在同一个地方继续执行。上下文的这一概念在中断的任务的场景下具有重大意义。其中，任务在被中断之后，处理器保存上下文并提供中断处理(interrupt service routine)。因此，上下文越小，延迟越小。
-  + 上下文的数据可能存放于处理器寄存器，任务所利用的内存，某些操作系统管理的任务所使用的控制寄存器(control registers)
+  - 在计算机科学中，任务(task)的上下文(context)是一个任务所必不可少的一组数据（该任务可以是进程，线程）。
+  - 这些数据允许任务中断，在这之后仍可在同一个地方继续执行。上下文的这一概念在中断的任务的场景下具有重大意义。其中，任务在被中断之后，处理器保存上下文并提供中断处理(interrupt service routine)。因此，上下文越小，延迟越小。
+  - 上下文的数据可能存放于处理器寄存器，任务所利用的内存，某些操作系统管理的任务所使用的控制寄存器(control registers)
 
 + 通俗的理解，上下文，也就是执行任务所需要的相关信息。
 + 这个任务可以是一段代码，一个线程，一个进程，一个函数。当这个“任务”相关的信息需要保存下来时，就可以使用`context`来记录。
@@ -214,26 +212,26 @@
 + 业务对象、业务实体、实体、领域对象在某种程度上是可以互换的术语[此处仅仅说是“某种程度上”，目的在于分析BO三要素的实质，针对于不同的理论，这几个名词确实存在差别]
 
 + 对象三要素
-  + 标识（identity），是唯一区别其他对象的标志；
-  + 状态（state），描述对象所蕴含的信息；
-  + 行为（behavior），对象所持有的、描述对象如何被使用的方法
+  - 标识（identity），是唯一区别其他对象的标志；
+  - 状态（state），描述对象所蕴含的信息；
+  - 行为（behavior），对象所持有的、描述对象如何被使用的方法
 
 ### 状态
 
 + 相对于字段、变量、属性等词，用“状态”一词来描述对象的“性格特点”最为合适。字段、变量、属性等，无非是描述对象状态的不同表现手法
 
 + 就目前个人对BO状态的理解而言，BO的状态信息有两类：固有信息和动态信息。
-  + 固有信息，是对象从诞生时与生俱来的信息（就像一个新生命的诞生一样，出生年月日、肤色、性别等信息是生来就有的）；
-  + 动态信息，即随着BO的成长，它会走入某一个人生场景中，扮演了某一个角色，从而在这个场景中被赋予了一些额外的信息，如：小明是个学生（从入学时，学生的基本信息被赋予），某天他去市图书馆借阅图书，此时他在借书这个场景中扮演了借书者这个角色，从而具有了借阅证、借阅信息等动态信息。
+  - 固有信息，是对象从诞生时与生俱来的信息（就像一个新生命的诞生一样，出生年月日、肤色、性别等信息是生来就有的）；
+  - 动态信息，即随着BO的成长，它会走入某一个人生场景中，扮演了某一个角色，从而在这个场景中被赋予了一些额外的信息，如：小明是个学生（从入学时，学生的基本信息被赋予），某天他去市图书馆借阅图书，此时他在借书这个场景中扮演了借书者这个角色，从而具有了借阅证、借阅信息等动态信息。
 
 + **固有信息**
-  + 业务对象在被构建（初始化）后，应达到一个相对比较稳定，且具有一定业务含义的状态，即业务对象的属性应已进行了相应的初始化设置，这样的构建才算合理、完整
-  + 与人类世界类似，人在出生时，就已经构造好了婴儿的鼻子、眼睛、手等内容，虽然此时他还没有衣服、母语、身份证等信息，但他在出生时，是一个相对较稳定且有意义的个体，就可以完成婴儿的核心操作，如：哭、呼吸、挥手等。
-  + 提前构造好该构造好的信息（注意：不是所有的信息都要一股脑的全构造好）是保证BO不被滥用的第一步
+  - 业务对象在被构建（初始化）后，应达到一个相对比较稳定，且具有一定业务含义的状态，即业务对象的属性应已进行了相应的初始化设置，这样的构建才算合理、完整
+  - 与人类世界类似，人在出生时，就已经构造好了婴儿的鼻子、眼睛、手等内容，虽然此时他还没有衣服、母语、身份证等信息，但他在出生时，是一个相对较稳定且有意义的个体，就可以完成婴儿的核心操作，如：哭、呼吸、挥手等。
+  - 提前构造好该构造好的信息（注意：不是所有的信息都要一股脑的全构造好）是保证BO不被滥用的第一步
 
 + 动态信息
-  + 进入某一场景，扮演某一角色（我更喜欢用“戴上帽子”这个说法），将拥有额外的动态属性。同“固有属性”的构建，某一业务对象走入特定的场景，扮演了另一角色时，也应该将这些动态属性予以设置
-  + **对象应尽量在构建自身的过程中完成自身状态的设置**。
+  - 进入某一场景，扮演某一角色（我更喜欢用“戴上帽子”这个说法），将拥有额外的动态属性。同“固有属性”的构建，某一业务对象走入特定的场景，扮演了另一角色时，也应该将这些动态属性予以设置
+  - **对象应尽量在构建自身的过程中完成自身状态的设置**。
 
 ### 属性封装
 
@@ -243,12 +241,12 @@
   + 内聚，难。业务对象的信息过多的暴露出去，容易滋生强盗逻辑，想捏回去形成一团，难！信息全部都暴露给外界，调用者还需要你BO干嘛？原因很简单：我能够伸手拿到你的任何信息，想实现什么就实现什么，可以为所欲为。如果你还有胆量暴露一些更改BO属性的权限，那我岂不是想怎么改就怎么改
   + 解耦，难。一个成语叫“覆水难收”，放出去的信息将被调用者肆意使用，而且呈现出快速蔓延的趋势，一张复杂的**耦合网**必然产生。等回头开始重构解耦时，发现堆积如山的代码、耦合似网的结构，已经让你无从下手。动一下，就引起全身阵痛
   + 常见的做法
-    + 刨一小块，改改变量名、方法名，移一些代码，用接口再包装一下（隔离嘛），循环的修改，最终发现进展依然是非常缓慢，几乎还没触及到业务核心；
-    + 先用方法（1）试试，一阵子后，MD，烦死了，直接推倒重新搞。这些做法还需要考虑一个问题：放出去的接口和信息已被调用者大量使用，怎么办？
+    - 刨一小块，改改变量名、方法名，移一些代码，用接口再包装一下（隔离嘛），循环的修改，最终发现进展依然是非常缓慢，几乎还没触及到业务核心；
+    - 先用方法（1）试试，一阵子后，MD，烦死了，直接推倒重新搞。这些做法还需要考虑一个问题：放出去的接口和信息已被调用者大量使用，怎么办？
 
 + 针对上述的苦痛，推荐下面的做法：
-  + 在对象构建时，把能设置的状态信息尽可能的予以赋值，提前封装；
-  + 尽可能的不要公布内部信息。能够`private`的，尽可能的私有。除非迫不得已，尽量不要将`setter()` 放出，仅使其`read only`。
+  - 在对象构建时，把能设置的状态信息尽可能的予以赋值，提前封装；
+  - 尽可能的不要公布内部信息。能够`private`的，尽可能的私有。除非迫不得已，尽量不要将`setter()` 放出，仅使其`read only`。
 
 ### 行为
 
@@ -257,33 +255,33 @@
 
 + 贫血VS充血
   + 贫血对象
-    + 由不具有任何行为的业务对象形成的领域模型，称为“贫血模型”[2]。对只有属性的getter/setter方法，不具有业务行为的BO，可认为是“贫血对象”。
-    + 丧失业务逻辑行为的贫血对象，和Value Oject类似，扮演了Data Container的角色，而在业务域中的逻辑操作方面将失去能力（或被遗弃、边缘化）
+    - 由不具有任何行为的业务对象形成的领域模型，称为“贫血模型”[2]。对只有属性的getter/setter方法，不具有业务行为的BO，可认为是“贫血对象”。
+    - 丧失业务逻辑行为的贫血对象，和Value Oject类似，扮演了Data Container的角色，而在业务域中的逻辑操作方面将失去能力（或被遗弃、边缘化）
   + 充血对象
   + 按大师的说法，与BO直接相关的行为职责将划归到BO中，使其在领域模型中扮演重要的角色
 + 但是二者不能绝对的说谁好、谁不好，应该一分为二的去看，它们各自具有其特点，应用在不同的场景中。特别地，对于那些需求难以完全吃透、明确，或许用贫血模型较充血模型要更好把控局势。
 + **用户需求——业务——领域**是一个对知识掌握程度递增的过程，领域模型的建立应基于对客观业务域的透彻掌握，不能偏左，也不可以偏右（不就是博弈么？没有最优秀的东西，只存在考虑诸多因素下的较为合适的东西）
 
 + business core
-  + 它应该是最精炼、纯粹、简单、直接、轻量级的业务核心。
-  + 因此，不属于核心业务逻辑范畴的职责和行为（如：持久化操作），尽量抛出去交给该处理它们的对象去处理。
+  - 它应该是最精炼、纯粹、简单、直接、轻量级的业务核心。
+  - 因此，不属于核心业务逻辑范畴的职责和行为（如：持久化操作），尽量抛出去交给该处理它们的对象去处理。
 
 + 上帝类（God class）
   + 可以认为它就是一个充血充得快爆掉的对象
   + 它几乎可以干所有涉及到它的工作，从而形成代码有几百行乃至上千行的牛X类
   + 有了这么一个牛X类，其他类不就成了浮云和鸡肋了么？这样可能引发很多问题
-    + 理解难。几千行的代码，没有几个人有耐心阅读，几乎没人能够完全理解其表达的业务含义。
-    + 修改难。没有很好的理解，如何修改？如何重构？
-    + 扩展难。丢了它玩不转，不丢它又引来一堆麻烦，对于一个几千行的实现类来说（除非大多都是public static 的方法），吃资源不说，接口隔离、应对扩展方面也是比较吃力的。
+    - 理解难。几千行的代码，没有几个人有耐心阅读，几乎没人能够完全理解其表达的业务含义。
+    - 修改难。没有很好的理解，如何修改？如何重构？
+    - 扩展难。丢了它玩不转，不丢它又引来一堆麻烦，对于一个几千行的实现类来说（除非大多都是public static 的方法），吃资源不说，接口隔离、应对扩展方面也是比较吃力的。
 
 + 谁拥有数据，谁持有行为
   + BO行为的本质是对BO自身状态的改变，以实现业务目标，并且这种状态的更改可能还需要其他协作者的参与（关联关系）。
   + 因此，我们可以说“**谁拥有数据，谁就持有更改这些数据（状态）的行为**”
   + 现实中，跟BO有关系的行为可能较多，全部纳入到BO中，会造成BO的臃肿和污染，违背SRP（职责单一）
-    + 可重用度高或是对象固有、与BO状态密切关联的方法放在BO中
-    + 可重用度低或者不是对象所固有（而依赖于特定场景）、与BO状态没有密切联系的方法放在BO管理者或服务层
+    - 可重用度高或是对象固有、与BO状态密切关联的方法放在BO中
+    - 可重用度低或者不是对象所固有（而依赖于特定场景）、与BO状态没有密切联系的方法放在BO管理者或服务层
 
 + 方法属于客户
-  + BO就是一个黑盒子，其中包含了逻辑和数据，而对象的使用者不知道里面有什么数据，也不知道实际的运行逻辑。使用者所能做的就是与对象进行交互，以完成当前的业务目标。因此，对象的行为是为客户而定
-  + 行为（方法、职责）是BO存在的根本，而行为就是为了交互，为供调用者所使用。
-  + 调用者会根据自己的需要，向它认为应该由谁提供行为的BO发出操作申请，一切都是以“客户（调用者）”为中心而服务的
+  - BO就是一个黑盒子，其中包含了逻辑和数据，而对象的使用者不知道里面有什么数据，也不知道实际的运行逻辑。使用者所能做的就是与对象进行交互，以完成当前的业务目标。因此，对象的行为是为客户而定
+  - 行为（方法、职责）是BO存在的根本，而行为就是为了交互，为供调用者所使用。
+  - 调用者会根据自己的需要，向它认为应该由谁提供行为的BO发出操作申请，一切都是以“客户（调用者）”为中心而服务的
