--- a/远程登录.md
+++ b/远程登录.md
@@ -63,7 +63,7 @@ NFS和RPC的关系:
 
 挂载(mount):
 + Mounting takes place before a computer can any kind of storage device (suc as a hard drive, CD-ROM, or network share). The user or their operating system must make it accessible through the computer's file system. A user can only access files on mounted media.
-      + "挂载"发生在计算机想要使用任何类型的存储设备(如硬盘,CD-ROM,网络设备)之前,操作系统必须讲这个设备纳入自己的文件系统中
+  - "挂载"发生在计算机想要使用任何类型的存储设备(如硬盘,CD-ROM,网络设备)之前,操作系统必须讲这个设备纳入自己的文件系统中
 + `mount -t type device dir` : This tells the kernel to arrach the filesystem found on device(which is of type type) at the directory dir.
-      + 挂载操作,实际上是把设备(device)中的文件系统附加到dir上,可以通过访问dic来访问这个设备
-      + 其本质就是针对某一设备,分析出其文件系统结构,并根据其文件系统类型调用linux中相应的驱动,处理该设备的元数据,将这些信息附加到linux的目录树上,并呈现出来.
+  - 挂载操作,实际上是把设备(device)中的文件系统附加到dir上,可以通过访问dic来访问这个设备
+  - 其本质就是针对某一设备,分析出其文件系统结构,并根据其文件系统类型调用linux中相应的驱动,处理该设备的元数据,将这些信息附加到linux的目录树上,并呈现出来.
