--- a/CPP/C-C++02.md
+++ b/CPP/C-C++02.md
@@ -203,11 +203,11 @@
 
 ## clock_gettime()
 
-+ 功能：获取当前时钟的时间，并保存到参数`__tp`
-+ 原型：`int clock_gettime(clockid_t __clock_id, struct timespec *__tp);`
++ 功能：获取当前时钟的时间，并保存到参数`tp`
++ 原型：`int clock_gettime(clockid_t clock_id, struct timespec *tp);`
 + 参数：
-  + `__clock_id`  --  时钟ID
-  + `__tp`        --  `timespec` 结构体指针
+  + `clock_id`  --  时钟ID
+  + `tp`        --  `timespec` 结构体指针
 + 返回值：
   + 成功  --  
   + 失败  -- 
