--- a/CPP/C-C++03.md
+++ b/CPP/C-C++03.md
@@ -326,3 +326,15 @@
 + PC机:在终端中输入`aarch64-linux-gnu-gdb`之后进入gdb调试模式，然后输入`target remote ip-address:port`即可连接远程目标
 
 + 交叉编译，程序的参数是从gdbserver 传进来的，其原理就是将调试信息通过端口发送到远程
+
+## 多核编程
+
++ 编译指导语句的含义是在编译器编译程序的时候，会识别特定的注释
++ 编译指导语句的形式为
+  + `#pragam omp <directive> [clause[[,] clause]. . .]`
+  + 其中`directive`部分就包含了具体的编译指导语句，包括`parallel`, `for`, `parallel for`, `section`, `sections`, `single`, `master`, `critical`, `flush`, `ordered`和`atomic`
+  + 这些编译指导语句或者用来分配任务，或者用来同步
+  + 子句可以影响到编译指导语句的具体行为，每一个编译指导语句都有一系列适合它的子句。
+  + **其中`parallel`、`for`、`sections`、`section`等主要用来创建线程**
+
++ 在C/C++程序中，用`#pragma omp parallel`来标志一段并行程序块
