--- a/CPP/C-C++01.md
+++ b/CPP/C-C++01.md
@@ -746,32 +746,6 @@
   - 第三，模板使用不同的语法来指出它存储的数据类型
   - 第四，`vector`类使用不同的语法来指定元素数
 
-## 模板类`array`
-
-+ `vector`类的功能比数组强大，但**付出的代价是效率稍低**。
-+ 如果需要的是长度固定的数组，使用数组是更佳的选择，但代价是不那么方便和安全。
-
-+ 有鉴于此，C++11新增了模板类`array`，它也位于名称空间`std`中。
-+ 与数组一样，`array`对象的长度也是固定的，也使用栈（静态内存分配），而不是自由存储区，因此其效率与数组相同，但更方便和安全。
-+ 要创建`array`对象，需要包含头文件`array`
-+ 创建一个名为`arr`的`array`对象，它包含`n_elem`个类型为`typename`的元素：
-  - `array<typeName, n_elem> arr;`
-+ 与创建`vector`对象不同的是，`n_elem`不能是变量
-
-+ **方法**
-  + `std::array::fill`
-    - 功能：把数组的所有元素都设置为val
-    - 函数原型:`void fill(const value_type& val);`
-  + `std::array::at`
-    - 功能：返回数组中第n个位置的元素的引用。返回数组中指定位置的元素
-    - 函数原型：`reference at(size_type n);const_reference at(size_type n) const;`
-
-## 容器 一
-
-+ 容器（`container`）
-  - 容器是指一个包含若干元素的对象，因为`Vector`的对象都是容器，所以我们称`Vector`是一种容器类型。
-  - 如果一个类的主要目的是保存一些对象，那么我们通常称之为容器。
-
 + 定义一个`Vector`类型的变量： `Vector v(6);  // 该Vector对象含有6个元素`
    1. 总的来说，`Vector`对象是一个“句柄”，它包含指向元素的指针（`elem`）以及元素的数量（`sz`）。在不同的`Vector`对象中元素的数量可能不通，即使同一个`Vector`对象在不同时刻也可能含有不通数量的元素。
    2. 不过，`Vector`对象本身的大小永远保持不变。这是C++语言处理可变数量的一项基本技术：一个固定大小的句柄指向位于“别处”（即通过new分配的自由空间）的一组可变数量的数据。
@@ -811,7 +785,33 @@
   - 如果向量对象是`const`限定的，则该函数返回一个指向`const value_type`的指针。
   - 否则，它返回指向`value_type`的指针。
 
-### 二维容器
+## 模板类`array`
+
++ `vector`类的功能比数组强大，但**付出的代价是效率稍低**。
++ 如果需要的是长度固定的数组，使用数组是更佳的选择，但代价是不那么方便和安全。
+
++ 有鉴于此，C++11新增了模板类`array`，它也位于名称空间`std`中。
++ 与数组一样，`array`对象的长度也是固定的，也使用栈（静态内存分配），而不是自由存储区，因此其效率与数组相同，但更方便和安全。
++ 要创建`array`对象，需要包含头文件`array`
++ 创建一个名为`arr`的`array`对象，它包含`n_elem`个类型为`typename`的元素：
+  - `array<typeName, n_elem> arr;`
++ 与创建`vector`对象不同的是，`n_elem`不能是变量
+
++ **方法**
+  + `std::array::fill`
+    - 功能：把数组的所有元素都设置为val
+    - 函数原型:`void fill(const value_type& val);`
+  + `std::array::at`
+    - 功能：返回数组中第n个位置的元素的引用。返回数组中指定位置的元素
+    - 函数原型：`reference at(size_type n);const_reference at(size_type n) const;`
+
+## 容器 
+
++ 容器（`container`）
+  - 容器是指一个包含若干元素的对象，因为`Vector`的对象都是容器，所以我们称`Vector`是一种容器类型。
+  - 如果**一个类的主要目的是保存一些对象**，那么我们通常称之为容器。
+
+## 二维容器
 
 + `vector`**不能容纳对象引用作为其元素**，因为引用不是一个对象。
 + 在`C++11`中，二维容器的定义可以写成`vector<vector<int > >`
