--- a/CPP/C-C++01.md
+++ b/CPP/C-C++01.md
@@ -21,18 +21,41 @@
 
 + 字符串和字符
   + 字符串常量"y"和字符常量"x"不同。
-  + 区别之一在与"x"是**基本类型(char)**，而"y"是**派生类型(char数组)**；
+  + 区别之一在于"x"是**基本类型(char)**，而"y"是**派生类型(char数组)**；
   + 区别之二是"y"实际上由两个字符组成：'x'和空字符'\0'
+
+## 类型说明符(占位符)
+
++ `%a, %A` : 读入一个浮点值(仅 C99 有效)  --  `	float *`
++ `%c`     : 单个字符：
+  + 读取下一个字符。如果指定了一个不为 1 的宽度 width，函数会读取 width 个字符，并通过参数传递，把它们存储在数组中连续位置。在末尾不会追加空字符。
+  + char *
+
++ `%d`     : 十进制整数：数字前面的 + 或 - 号是可选的。 -- `int *`
++ `%e`     : 使用`e`字符的科学计数法（尾数和指数）
++ `%E`     : 使用`E`字符的科学计数法（尾数和指数）
++ `%f`     : 十进制浮点数  --  `float *`
++ `%g`     : 自动选择`%e`或`%f`中合适的表示法
++ `%G`     : 自动选择`%E`或`%f`中合适的表示法
++ `%o`     : 有符号八进制  --  `int *`
++ `%s`     : 字符的字符串,这将读取连续字符，直到遇到一个空格字符（空格字符可以是空白、换行和制表符）。  --  `char *`
++ `%u`     : 无符号十进制整数  --  `unsigned int *`
++ `%x`     : 无符号十六进制整数
++ `%X`     : 无符号十六进制整数（大写字母）
++ `%p`     : 指针地址，	读入一个指针 。
++ `%[]`    : 无输出
++ `%%`     : 读 % 符号。
 
 ### C++中
 
-+ 字符串是存储在内存的连续字节中的一系列字符。
++ 字符串是存储在内存的连续字节中的一系列字符
+
 + C++处理字符串的方式有两种：
   - 第一种来自C语言，常被称为C-风格字符串(`C-style string`)
   - 另一种基于`string`类库的方法
 
 + C-风格字符串
-  + **C-风格字符串具有一种特殊的性质：以空字符(null character)结尾，空字符被写作`\0`**，其ASCII码为0，用来标记字符串的结尾。例如
+  + C-风格字符串具有一种特殊的性质：**以空字符(null character)结尾，空字符被写作`\0`**，其ASCII码为0，用来标记字符串的结尾。例如
     - `char dog[8] = {'b', 'e', 'a', 'u', 'x', ' ', 'I', 'I'};  // not a string`
     - `char cat[8] = {'f', 'a', 't', 'e', 's', 's', 'a', '\0'}; // a string`
   + 使用引号括起来的字符串初始化字符数组，这种字符串被称为**字符串常量**(string constant)或**字符串字面值**(string literal)，例如
@@ -47,7 +70,7 @@
 
 + `string`类简介
   + C++程序常使用指针（而不是数组）来处理字符串
-  + `ISO/ANSI C++98`标准通过添加`string`类扩展了C++库，因此现在可以`string`类型的变量（使用C++的话说，**是对象**）而不是字符数组来存储字符串。
+  + `ISO/ANSI C++98`标准通过添加`string`类扩展了C++库，因此现在可以`string`类型的变量（使用C++的话说，是**对象**）而不是字符数组来存储字符串。
   + 在很多方面，使用`string`对象的方式与使用字符数组相同：
     - 可以使用C-风格字符串来初始化`string`对象
     - 可以使用`cin`来将键盘输入存储到`string`对象中
@@ -230,7 +253,7 @@
 + 在`The C++ Programming Language`中对`volatile`修饰词的说明：
   - `A volatile specifier is a hint to compiler that an object may change its value in ways not specified by the language so that aggressive optimizations must be avoided.`
 + `volatile`关键字是一种类型修饰符，用它声明的类型变量表示可以被某些编译器未知的因素更改，比如：操作系统，硬件或者其他线程等。遇到这个关键字声明的变量，编译器对访问该变量的代码就不再进行优化，从而可以提供对特殊地址的稳定访问。
-+ 当要求使用`volatile`声明的变量的值的时候，系统总是重新从它所在的内存读取数据，即使它前面的指令刚刚从该处读取过数据，而且读取的数据立刻被保存。
++ 当要求使用`volatile`声明的变量的值的时候，**系统总是重新从它所在的内存读取数据**，即使它前面的指令刚刚从该处读取过数据，而且读取的数据立刻被保存。
 
 ## extern
 
