--- a/CPP/C-C++02.md
+++ b/CPP/C-C++02.md
@@ -53,6 +53,10 @@
 + 返回值：
   + 成功  --  读取的数字
   + 失败  --  -1 or 0 
++ 注意：
+  + 必须实际提供一个足够大的缓冲区来装载`nbyte`字节的数据
+  + 常见的错误是提供了一个未初始化的指针buf，而没有提供实际的缓冲区
+  + read的实现必须检测的错误及相应的错误码
 
 ## mmap()
 
@@ -165,10 +169,12 @@
       + `O_DSYNC` 每次写入需要等待物理IO完成，但是如果不影响读取，则不需要更新文件属性
       + `O_FSYNC` 使每一个 以文件描述符为参数的进行的read操作等待，直到所有对文件同一部分的挂起写操作都完成
 + 返回值：
-  + 成功  --
-  + 失败  --
+  + 成功  --  非负整数来表示打开的文件描述符
+  + 失败  --  返回-1，并设置errno
 + 需求：
   + 头文件：`#include <fcntl.h>`  
++ 注意：
+  + open的实现必须检测的错误及相应的错误码
 
 
 ## atoi()
@@ -488,6 +494,9 @@
 + 返回值：
   + 成功  --  返回一个以NULL结尾的字符串，该字符串为被请求环境变量的值
   + 失败  --  返回NULL
++ 注意：
+  + 如果没有将第一次返回的字符串拷贝到缓冲区中去，多次调用`getenv`就要特别小心
+  + `getenv`的某些实现为返回字符串使用了静态缓冲区，**每次调用时都会重写缓冲区**
 
 ## to_string()
 
@@ -525,7 +534,7 @@
   + `str`：这是指向一个字符数组的指针，该数组存储了C字符串
   + `format`:这是字符串，包含了要被写入到字符串`str`的文本。它可以包含嵌入的`format`标签，`format`标签可被随后的附加参数中指定的值替换，并按需求进行格式化。`format`标签属性是`%[flags][width][.precision][length]specifier`
   + 具体详情：
-  + `specifier, 说明符`：
+  + `specifier, 类型说明符`：
     + `c` : 字符
     + `d, i` : 有符号的十进制整数
     + `e` : 使用`e`字符的科学计数法（尾数和指数）
@@ -638,7 +647,9 @@
 
 ## C标准库 -- `stdarg.h`
 
-+ 简介：`stdarg.h`头文件定义了一个变量类型`va_list`和三个宏，**这三个宏可用于在参数个数未知（即参数个数可变）时获取函数中的参数。**
++ 简介：
+  + `stdarg.h`头文件定义了一个变量类型`va_list`和三个宏，
+  + 这三个宏可用于在参数个数未知（即**参数个数可变**）时获取函数中的参数。
   + 可变参数的函数通过在参数列表的末尾是使用省略号（`...`）定义的。
 
 + **库变量：**
@@ -814,7 +825,8 @@
 
 ## __sync_fetch_and_add系列
 
-+ 作用：**提供多线程下变量的加减和逻辑运算的原子操作**
++ 作用：提供**多线程下变量的加减和逻辑运算的原子操作**
++ 因为是内置函数，所以使用的时候不需要包含任何头文件
   
 + 存在原因：
   - `count++` 这种操作不是原子的。一个自加操作，本质上是分成三步的：
