--- a/CPP/C-C++03.md
+++ b/CPP/C-C++03.md
@@ -34,6 +34,75 @@
   + 成功  --  新进程返回 0，或者新进程对旧进程的进程ID
   + 失败  --  -1
 
+## getpid()
+
++ 功能：返回进程ID
++ 原型：`pid_t getpid(void);`
++ 参数：无
++ 返回值：
+  + 成功  --  进程ID
+  + 失败  --  
++ 需求：
+  + 头文件：`#include <unistd.h>`
++ 注意：
+  + `pid_t`是用来表示进程ID的一个无符号整数类型
+  + `getpid`函数不能返回错误
+
+## getppid()
+
++ 功能：返回父进程ID
++ 原型：`pid_t getppid(void);`
++ 参数：无
++ 返回值：
+  + 成功  --  父进程ID
+  + 失败  --  
++ 需求：
+  + 头文件：`#include <unistd.h>`
++ 注意：
+  + `pid_t`是用来表示进程ID的一个无符号整数类型
+  + `getppid`函数不能返回错误
+
+## geteuid()
+
++ 功能：返回用户ID
++ 原型：`uid_t geteuid(void);`
++ 参数：无
++ 返回值：
+  + 成功  --  用户ID
+  + 失败  -- 
++ 需求：
+  + 头文件：`#include <unistd.h>`
++ 注意：
+  + `uid_t`是代表用户ID的整数类型
+  + `geteuid()`不返回错误
+
+## getegid()
+
++ 功能：返回组ID
++ 原型：`gid_t getegid(void);`
++ 参数：无
++ 返回值：
+  + 成功  --  组ID
+  + 失败  -- 
++ 需求：
+  + 头文件：`#include <unistd.h>`
++ 注意：
+  + `gid_t`是代表组ID的整数类型
+  + `getegid()`不返回错误
+
+## fork()
+
++ 功能：创建新的进程
++ 原型：`pid_t fork(void);`
++ 参数：无
++ 返回值：
+  + 成功  --  向子进程返回0，并将子进程ID返回父进程
+  + 失败  --  -1，并设置errno，没有创建子进程
++ 需求：
+  + 头文件：`#include <unistd.h>`
++ 注意：
+  + fork函数的返回值是允许父进程和子进程区别自己并执行不同代码的关键特征
+
 ## execl()
 
 + 功能：使用参数`arg`以及之后的参数 执行`path`
@@ -58,7 +127,7 @@
 + 功能：等待进程为`pid`的子进程死亡， 
 + 原型：`pid_t waitpid(pid_t  pid, int* stat_loc, int options);`
 + 参数：
-  + `pid`  --  等待的进程
+  + `pid`  --  等待的进程,指向返回状态所在单元的指针和一个用来指定可选项的标志符
     + pid有四种情况：
       + pid <  -1 等待组ID等于pid绝对值的任意子进程
       + pid == -1 等待任意子进程
@@ -186,6 +255,34 @@
   + 成功  --  x的平方根
 + 需求：
   + 头文件：`#include <math.h>`
+
+## 强制转换运算符（强制类型转换）
+
++ 强制转换运算符是一种特殊的运算符，它把一种数据类型转换为另一种数据类型。
++ 强制转换运算符是一元运算符，它的优先级与其他一元运算符相同
+
++ 大多数的 C++ 编译器都支持大部分通用的强制转换运算符：
+  + `(type) expression`
+  + type 是转换后的数据类型
+
++ C++ 支持的其他几种强制转换运算符:
+  + `const_cast<type> (expr)`: 
+    + `const_cast` 运算符用于修改类型的 `const` / `volatile` 属性。
+    + 除了 `const` 或 `volatile` 属性之外，目标类型必须与源类型相同。
+    + 这种类型的转换主要是用来操作所传对象的 `const` 属性，可以加上 `const` 属性，也可以去掉 `const` 属性。
+  + `dynamic_cast<type> (expr)`:
+    + `dynamic_cast` 在运行时执行转换，验证转换的有效性。
+    + 如果转换未执行，则转换失败，表达式 `expr` 被判定为 `null`
+    + `dynamic_cast` 执行动态转换时，`type` 必须是类的指针、类的引用或者 `void*`
+    + 如果 `type` 是类指针类型，那么 `expr` 也必须是一个指针，如果 `type` 是一个引用，那么 `expr` 也必须是一个引用
+  + `reinterpret_cast<type> (expr)`:
+    + `reinterpret_cast` 运算符把某种指针改为其他类型的指针。
+    + 它可以把一个指针转换为一个整数，也可以把一个整数转换为一个指针。
+  + `static_cast<type> (expr)`:
+    + `static_cast` 运算符执行非动态转换，没有运行时类检查来保证转换的安全性。
+    + 例如，它可以用来把一个基类指针转换为派生类指针。
+
+## limits.h头文件
 
 ## 接口和动态库
 
